@@ -42,6 +42,8 @@ namespace chr = std::chrono;
 
 void foo()
 {
+  bool test __attribute__((unused)) = true;
+
   chr::system_clock::time_point begin = chr::system_clock::now();
   chr::microseconds ms(500);
 
